shell/app-cache: Fix folder name regression

Before commit 343b3351f1, we were inconsistent whether we expected
translated folder names to contain the .directory suffix or not.

It turns out that the commit picked the option that is *not* used
for folders created by gnome-software, so the issue is still present
(and worse, given the underlying 'X-GNOME-Utilities.directories'
name of a default folder).

Address the issue by caching the translated string for both the
stripped and unstripped folder names.

https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/2623